--- a/mobile.css
+++ b/mobile.css
@@ -14,13 +14,19 @@
     flex-direction: column;
     align-items: center;
   }
-
+  .centered {
+    font-size: 32px;
+    top: 19%;
+  }
   .navbar .nav-item,
   .navbar .id-name {
     width: 100%;
     text-align: center;
     border: none !important;
     padding: 10px 0;
+  }
+  .id-name {
+    display: none;
   }
 
   .section-info-wrapper {
