--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ body {
 }
 
 .crop-bottom {
-  width: 100vw;
+  width: 100%;
   height: 700px;
-  object-fit: cover;
-  clip-path: inset(0 0 39% 0);
   display: block;
+  transform: scale(1.5);
+}
+.box-img {
+  overflow: hidden;
+  width: 100%;
 }
 
 .centered {
@@ -31,7 +34,6 @@ body {
   transform: translate(-50%, -50%);
   font-size: 50px;
   font-weight: 500;
-  padding-bottom: 450px;
   z-index: 10;
   text-align: center;
 }
@@ -44,9 +46,11 @@ body {
 }
 
 .navbar {
+  /*
   position: absolute;
   top: calc(700px * (1 - 0.39));
   left: 0;
+  */
   width: 100vw;
   background: rgba(255, 255, 255, 0.8);
   border-top: 1px solid #ccc;
